--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -56,7 +56,8 @@ jobs:
 
       - name: Generate Changelog
         run: |
-          python -m pip install evative7-changeloggen
+          # python -m pip install evative7-changeloggen
+          python -m pip install .
           changelog .
 
       - name: Retrieve release distributions
@@ -79,7 +80,7 @@ jobs:
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
-    if: false
+    if: true
 
     # Dedicated environments with protections for publishing are strongly recommended.
     # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
