--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
 ]
-dependencies = ["build"]
+dependencies = []
 description = "Generate changelog based on git commit"
 name = "evative7-changeloggen"
 readme = "README.md"
@@ -17,6 +17,7 @@ version = "0.0.3"
 
 [project.optional-dependencies]
 dev = ["black", "isort", "flake8", "pytest", "pre-commit"]
+build = ["build"]
 
 [project.scripts]
 changelog = "changelog:main"
